...
            app:layout_constraintEnd_toEndOf="parent"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/ed_number"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/textView"/>
    <Button
            android:text="@string/ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ok_button" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/ed_number" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:onClick="check"/>
    <TextView
            android:text="0"
            android:layout_width="wrap_content"
...
